add eclipse compiler, eclipse formatter, and other mini chaanges

--- a/PAIDE/src/main/res/layout/editor.xml
+++ b/PAIDE/src/main/res/layout/editor.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:visibility="gone"
         android:id="@+id/progress"
-        android:background="@color/primary"
-        android:foreground="@color/primaryVariant" />
+        android:progressDrawable="@drawable/progress_indicator" />
 
     <RelativeLayout
         android:layout_height="40dp"
